--- a/unit_4/public/index2.html
+++ b/unit_4/public/index2.html
@@ -14,7 +14,7 @@
         <li>Description 4</li>
         <li>Description 5</li>
     </ul>
-    <img src="./public/img/123.png" alt="">
+    <img src="./img/123.png" alt="">
     
 </body>
 </html>
